# ball-launcher

./: README.md
include/: ball-queue.h  ball.h
src/: CMakeLists.txt  ball-queue.cpp  ball.cpp  main.cpp
